fix style issue on mobile device
1. use position:fixed to fix overlay not 100% height after scrolling
2. display one button one line(use display:block) on small screen

--- a/app/templates/client/source/styles/layout/loading.styl
+++ b/app/templates/client/source/styles/layout/loading.styl
@@ -1,6 +1,6 @@
 .loading-view
     .ngplus-overlay-background
-        position absolute
+        position fixed
         height 100%
         width 100%
         top 0
@@ -10,7 +10,7 @@
         opacity 0.8
 
     .ngplus-overlay-content
-        position absolute
+        position fixed
         width $loadingImageWidth
         height $loadingImageHeight
         top 50% !important
